[package]
name = "hexdump"
version = "0.1.1"
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tbu-/hexdump"
description = "Easy hexdump to stdout or as an iterator"

[dependencies]
arrayvec = "0.5.2"
itertools = ">=0.3.0,<0.5.0"

[dev-dependencies]
num = "0.1.27"
quickcheck = "1.0"
