[package]
name = "hexdump"
version = "0.1.1"
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tbu-/hexdump"
description = "Easy hexdump to stdout or as an iterator"

[dependencies]
arrayvec = "0.5.2"

[dev-dependencies]
quickcheck = "1.0"
